--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=975,680
 Collapsed=1
 
 [Window][Render settings]
-Pos=60,60
-Size=102,54
+Pos=417,28
+Size=180,79
+Collapsed=0
+
+[Window][Spheres]
+Pos=69,60
+Size=223,151
 Collapsed=0
 
