--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,17 @@ Size=180,79
 Collapsed=0
 
 [Window][Spheres]
-Pos=69,60
+Pos=87,58
 Size=223,151
+Collapsed=0
+
+[Window][Spawn]
+Pos=368,126
+Size=426,158
+Collapsed=0
+
+[Window][Settings]
+Pos=14,48
+Size=159,77
 Collapsed=0
 
