sync position using shader buffers

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=659,57
-Size=975,680
+Pos=781,24
+Size=974,668
 Collapsed=1
 
 [Window][Render settings]
-Pos=417,28
+Pos=35,39
 Size=180,79
 Collapsed=0
 
@@ -19,12 +19,27 @@ Size=223,151
 Collapsed=0
 
 [Window][Spawn]
-Pos=574,130
-Size=426,158
+Pos=1117,25
+Size=450,150
 Collapsed=0
 
 [Window][Settings]
-Pos=14,48
-Size=157,103
+Pos=9,124
+Size=417,107
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=1207,306
+Size=463,96
+Collapsed=0
+
+[Window][Loop settings]
+Pos=223,34
+Size=272,64
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=60,60
+Size=354,48
 Collapsed=0
 
